--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ test:
 production:
   adapter: mysql2
   database: sharework_env_production
-  username: admin
+  username: root
   password: sharework
   host: localhost
   port: 3306
